Rewrite completly